generated/checkers/refine/KN-Double-Free-5aa2184e-2/build_logs/syntax-repair-refine-0-4/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::isAllocatorCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:206:40: error: invalid conversion from ‘const clang::Decl*’ to ‘const clang::FunctionDecl*’ [-fpermissive]
  206 |   const FunctionDecl *FD = Call.getDecl();
      |                            ~~~~~~~~~~~~^~
      |                                        |
      |                                        const clang::Decl*
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::getFreeLikeParamIndices(const clang::ento::CallEvent&, llvm::SmallVectorImpl<unsigned int>&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:226:40: error: invalid conversion from ‘const clang::Decl*’ to ‘const clang::FunctionDecl*’ [-fpermissive]
  226 |   const FunctionDecl *FD = Call.getDecl();
      |                            ~~~~~~~~~~~~^~
      |                                        |
      |                                        const clang::Decl*
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
